@startuml
skinparam classAttributeIconSize 0

class RegisterEmployeeUI
{
}

class RegisterEmployeeController
{
    +createEmployee(role, name, address, phoneNumber, email, soc)
    +validateEmployee(employee)
}

class Employee
{
	-employeeID;
	-name;
	-address;
	-phoneNumber;
	-email;
	-soc;
    +validateEmployee(employee)
}

class Company{
    -description
    +getEmployeeStore()
}

class EmployeeStore{
    +createEmployee(role, name, address, phoneNumber, email, soc)
    +validateEmployee(employee))
    +saveEmployee(employee))
    +addEmployee(employee))
}

class SpecialistDoctor{
    -doctorIndexNumber
}

RegisterEmployeeUI ..> RegisterEmployeeController
RegisterEmployeeController ..> Company
Company --> EmployeeStore
EmployeeStore --> Employee
SpecialistDoctor -left-|> Employee

@enduml
